# swell-foop

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  configure.ac  meson.build  meson_post_install.py  org.gnome.SwellFoop.json  swell-foop.desktop.in.in  swell-foop.doap  swell-foop.in  swell-foop.schemas.in
data/: Makefile.am  first-run-stack.ui  meson.build  org.gnome.SwellFoop.appdata.xml.in  org.gnome.SwellFoop.desktop.in  org.gnome.SwellFoop.gschema.xml  org.gnome.SwellFoop.metainfo.xml.in  org.gnome.SwellFoop.service.in  org.gnome.swell-foop.gschema.xml  org.gnome.swell-foop.gschema.xml.in  preferences.ui  settings.ui  swell-foop.appdata.xml  swell-foop.appdata.xml.in  swell-foop.css  swell-foop.desktop.in  swell-foop.desktop.in.in  swell-foop.schemas.in  swell-foop.ui
data/icons/: Makefile.am
data/themes/: Makefile.am
data/themes/colors/: Makefile.am  theme.js
data/themes/shapesandcolors/: Makefile.am  theme.js
data/themes/tango/: Makefile.am  theme.js
data/themes/test/: Makefile.am  theme.js
data/ui/: first-run-stack.ui  first-run.ui  game-over.ui  game-view.ui  help-overlay.ui  preferences.ui  swell-foop.ui
help/: ChangeLog.old  LINGUAS  Makefile.am  meson.build
help/C/: index.docbook  index.page  introduction.page  keyboard-shortcut.page  keyboard-shortcuts.page  legal.xml  play.page  playing-game.page  preferences.page  score.page  scores.page  settings.page  start-game.page  start.page  strategy.page  swell-foop.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  (+56 more)
same-gnome-clutter/: Makefile.am  same-gnome-clutter.desktop.in.in  same-gnome-clutter.in  same-gnome-clutter.schemas.in
same-gnome-clutter/data/: same-gnome.ui  settings.ui
same-gnome-clutter/data/themes/tango/: Makefile.am
same-gnome-clutter/data/themes/test/: Makefile.am
same-gnome-clutter/help/: ChangeLog.old  same-gnome.omf.in
same-gnome-clutter/help/C/: same-gnome.xml
same-gnome-clutter/help/ca/: ca.po
same-gnome-clutter/help/cs/: cs.po
same-gnome-clutter/help/de/: de.po
same-gnome-clutter/help/el/: el.po
same-gnome-clutter/help/en_GB/: en_GB.po
same-gnome-clutter/help/es/: es.po
same-gnome-clutter/help/eu/: eu.po
same-gnome-clutter/help/fr/: fr.po
same-gnome-clutter/help/it/: it.po
same-gnome-clutter/help/oc/: oc.po
same-gnome-clutter/help/ru/: ru.po
same-gnome-clutter/help/sv/: sv.po
same-gnome-clutter/src/: About.js  Light.js  Path.js.in  Score.js  Settings.js  main.js
snap/: snapcraft.yaml
src/: About.js  Board.js  Light.js  Makefile.am  Path.js.in  Score.js  Settings.js  ThemeLoader.js  config.vapi  game-view.vala  game.vala  history.vala  main.js  meson.build  org.gnome.SwellFoop.gresource.xml  score-dialog.vala  swell-foop.in  swell-foop.vala  window.vala
subprojects/: README  libgnome-games-support.wrap
vapi/: config.vapi
