@YELP_HELP_RULES@
HELP_ID = swell-foop

HELP_MEDIA = \
	figures/play1.png \
	figures/play2.png \
	figures/play3.png \
	figures/play4.png \
	figures/start-up.png

HELP_FILES = \
	legal.xml \
	swell-foop.xml

HELP_LINGUAS = ca cs de el en_GB es eu fr it oc ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
