@YELP_HELP_RULES@
HELP_ID = swell-foop

HELP_MEDIA = \
	figures/logo.png \
	figures/logo32.png

HELP_FILES = \
	index.page \
	introduction.page \
	legal.xml \
	play.page \
	start-game.page \
	scores.page

HELP_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
