@YELP_HELP_RULES@
HELP_ID = swell-foop

HELP_MEDIA = \
	figures/play1.png \
	figures/play2.png \
	figures/play3.png \
	figures/play4.png \
	figures/start-up.png

HELP_FILES = \
	legal.xml \
	index.docbook

HELP_LINGUAS = ca cs de el en_GB es eu fr hu it oc pl pt_BR ru sl sr sr@latin sv zh_CN

EXTRA_DIST = LINGUAS

-include $(top_srcdir)/git.mk
