swell_foop_help_pages = [
  'legal.xml',
  'index.docbook',
]

swell_foop_help_media = [
  'figures/play1.png',
  'figures/play2.png',
  'figures/play3.png',
  'figures/play4.png',
  'figures/start-up.png',
]

gnome.yelp(meson.project_name(),
  sources: swell_foop_help_pages,
  media: swell_foop_help_media
)
