help_pages = [
  'legal.xml',
  'index.page',
  'introduction.page',
  'playing-game.page',
  'preferences.page',
  'score.page',
  'start.page',
  'strategy.page',
]

help_media = [
  'figures/logo.png',
  'figures/start-game.png',
]

gnome.yelp(meson.project_name(),
  sources: help_pages,
  media: help_media,
  symlink_media: true
)
