icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps
icon512dir=$(datadir)/icons/hicolor/512x512/apps

hc16dir=$(datadir)/icons/HighContrast/16x16/apps
hc22dir=$(datadir)/icons/HighContrast/22x22/apps
hc24dir=$(datadir)/icons/HighContrast/24x24/apps
hc32dir=$(datadir)/icons/HighContrast/32x32/apps
hc48dir=$(datadir)/icons/HighContrast/48x48/apps
hc256dir=$(datadir)/icons/HighContrast/256x256/apps

icon16_DATA = 16x16/swell-foop.png
icon22_DATA = 22x22/swell-foop.png
icon24_DATA = 24x24/swell-foop.png
icon32_DATA = 32x32/swell-foop.png
icon48_DATA = 48x48/swell-foop.png
icon256_DATA = 256x256/swell-foop.png
icon512_DATA = 512x512/swell-foop.png

hc16_DATA = HighContrast/16x16/swell-foop.png
hc22_DATA = HighContrast/22x22/swell-foop.png
hc24_DATA = HighContrast/24x24/swell-foop.png
hc32_DATA = HighContrast/32x32/swell-foop.png
hc48_DATA = HighContrast/48x48/swell-foop.png
hc256_DATA = HighContrast/256x256/swell-foop.png

EXTRA_DIST = \
	$(icon16_DATA) \
	$(icon22_DATA) \
	$(icon24_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA) \
	$(icon256_DATA) \
	$(icon512_DATA) \
	$(hc16_DATA) \
	$(hc22_DATA) \
	$(hc24_DATA) \
	$(hc32_DATA) \
	$(hc48_DATA) \
	$(hc256_DATA)

-include $(top_srcdir)/git.mk
