icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
icon256dir=$(datadir)/icons/hicolor/256x256/apps
icon512dir=$(datadir)/icons/hicolor/512x512/apps
iconsymbolicdir=$(datadir)/icons/hicolor/symbolic/apps

icon16_DATA = 16x16/swell-foop.png
icon22_DATA = 22x22/swell-foop.png
icon24_DATA = 24x24/swell-foop.png
icon32_DATA = 32x32/swell-foop.png
icon48_DATA = 48x48/swell-foop.png
icon256_DATA = 256x256/swell-foop.png
icon512_DATA = 512x512/swell-foop.png
iconsymbolic_DATA = symbolic/swell-foop-symbolic.svg

EXTRA_DIST = \
	$(icon16_DATA) \
	$(icon22_DATA) \
	$(icon24_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA) \
	$(icon256_DATA) \
	$(icon512_DATA) \
	$(iconsymbolic_DATA)

-include $(top_srcdir)/git.mk
